Update configs for production EC2 deployment